--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs
+/BinaryTree/obj
+/LinkedList/obj
+/Recursion/obj
